# WordleBot

./: .gitignore  .gitmodules  INTERACTION_EXECUTION_WALKTHROUGH.md  README.md  SS3_TECHNICAL_DOCUMENTATION.md  SUBSYSTEM_LEGEND.md
gamification/: README.txt  constants.py  dictionary.py  display.py  gamification_node.py  gamification_trial.py  gamificiation_node.py  main.py  perception_test.py  wordle_logic.py
interaction_execution/: CMakeLists.txt  package.xml
interaction_execution/include/interaction_execution/: camera_view.hpp  hl_digital_twin_view.hpp  main_window.hpp  mission_coordinator.hpp  rviz_moveit_view.hpp  rviz_sim_view.hpp  rviz_sim_view.hpp.working_reference  wordle_view.hpp
interaction_execution/launch/: gui.launch.py  load_ur_description.launch.py  ur_driver_gui.launch.py
interaction_execution/rviz/: sim_view.rviz
interaction_execution/src/: TO_DO.txt  camera_view.cpp  hl_digital_twin_view.cpp  main.cpp  main_window.cpp  mission_coordinator.cpp  mission_coordinator_main.cpp  rs2_concept.ui  rs2_concept_ui.py  rviz_moveit_view.cpp  rviz_sim_view.cpp  rviz_sim_view.cpp.working_reference  ui_concepts.html  wordle_view.cpp
interaction_execution/src/wordle-clone/: index.html
interaction_execution/src/wordle-clone/css/: styles.css
interaction_execution/src/wordle-clone/js/: main.js
interaction_execution/test/: grading_test_cases.md
motion_planning_and_control/hello_moveit/: CMakeLists.txt  package.xml
motion_planning_and_control/hello_moveit/src/: hello_moveit.cpp
motion_planning_and_control/hello_ur3eMoveit/: CMakeLists.txt  README.md  package.xml
motion_planning_and_control/hello_ur3eMoveit/src/: hello_ur3eMoveit.cpp
motion_planning_and_control/hl_control/: CMakeLists.txt  README.md  TECHNICAL_DOCUMENTATION.md  package.xml
motion_planning_and_control/hl_control/config/: tc2_1_board.yaml
motion_planning_and_control/hl_control/hl_control/: hl_control_node.py  rl_task_optimiser.py  test_env_publisher.py
motion_planning_and_control/hl_control/launch/: hl_control.launch.py
motion_planning_and_control/hl_control/msg/: GameboardState.msg  LetterObject.msg
motion_planning_and_control/hl_control/rl_task_optimiser/: reward.py  task_sequencer.py
motion_planning_and_control/hl_control/rl_task_optimiser/training_env/: wordle_env.py
motion_planning_and_control/hl_control/test/: demonstration_test.py  test_sim.py
motion_planning_and_control/move_goal_test/: .gitignore  CMakeLists.txt  README  package.xml
motion_planning_and_control/move_goal_test/include/move_goal_test/: move_goal_test.hpp
motion_planning_and_control/move_goal_test/main/: move_goal_test_node.cpp
motion_planning_and_control/move_goal_test/src/: move_goal_test.cpp
motion_planning_and_control/mtc_tutorial/: CMakeLists.txt  README.md  package.xml
motion_planning_and_control/mtc_tutorial/launch/: pick_place_demo.launch.py
motion_planning_and_control/mtc_tutorial/src/: mtc_tutorial.cpp
motion_planning_and_control/wordleBot_control/: CMakeLists.txt  README.md  package.xml
motion_planning_and_control/wordleBot_control/config/: kinematics.yaml
motion_planning_and_control/wordleBot_control/include/wordleBot_control/: wordle_bot_control_node.hpp  wordle_bot_controller.hpp
motion_planning_and_control/wordleBot_control/launch/: tc1_key_control_concepts.launch.py  tc2_advanced_motion_control.launch.py  tc3_advanced_collision_avoidance.launch.py  wordle_bot.launch.py  wordle_bot_mtc.launch.py
motion_planning_and_control/wordleBot_control/main/: main.cpp
motion_planning_and_control/wordleBot_control/src/: wordle_bot_control_node.cpp  wordle_bot_controller.cpp
motion_planning_and_control/wordleBot_control/test/: README.md  goal_motion_test.launch.py  goal_motion_test.py  tc1_key_control_concepts.py  tc2_advanced_motion_control.py  tc3_advanced_collision_avoidance.py
motion_planning_and_control/wordlebot_control/: CMakeLists.txt  MGI_IMPLEMENTATION_CONTEXT.md  Orientationcontrol_PPMTC.md  README.md  Technical-Documentation.md  WORDLE_INTEGRATION_POSE.md  oldmovetofunct.md  package.xml
motion_planning_and_control/wordlebot_control/config/: ik_warm_start.yaml  kinematics.yaml  pose_working.yaml  scan_sweep_poses.yaml  wordle_bot_controller.yaml  wordle_mtc_planner.yaml
motion_planning_and_control/wordlebot_control/include/wordlebot_control/: wordle_bot_control_node.hpp  wordle_bot_controller.hpp  wordle_mtc_planner.hpp
motion_planning_and_control/wordlebot_control/launch/: tc1_key_control_concepts.launch.py  tc2_advanced_motion_control.launch.py  tc3_advanced_collision_avoidance.launch.py  wordle_bot.launch.py  wordle_bot_mtc.launch.py  wordlebot_bringup.launch.py  wordlebot_rviz.launch.py  wordlecontrolfullstack.launch.py
motion_planning_and_control/wordlebot_control/main/: main.cpp
motion_planning_and_control/wordlebot_control/msg/: PickPlaceTask.msg
motion_planning_and_control/wordlebot_control/rviz/: wordlebot_control.rviz
motion_planning_and_control/wordlebot_control/src/: wordle_bot_control_node.cpp  wordle_bot_controller.cpp  wordle_mtc_planner.cpp
motion_planning_and_control/wordlebot_control/test/: README.md  tc1_key_control_concepts.py  tc2_advanced_motion_control.py  tc3_advanced_collision_avoidance.py  test_wrist3_alignment.cpp
other/my_first_robot/: package.xml  setup.py
other/my_first_robot/my_first_robot/: draw_circle.py
perception/launch/: ss1_perception.launch.py
perception/outputs/: training_report.txt
perception/src/: To_Do.txt  To_Read.txt  collect_training_data.py  realsense_camera_cnn.py  train_letter_cnn.py  webcam_node.py
perception/src/Retro/: computer_camera.py  realsense_camera.py
voice_control/: gui_bridge.py  main.py  speaker_verification.py  voice_node.py
